--- a/app/src/main/res/layout/activity_notification_details_fragment.xml
+++ b/app/src/main/res/layout/activity_notification_details_fragment.xml
@@ -8,8 +8,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notificationRecycler"
-        android:layout_width="409dp"
-        android:layout_height="889dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginTop="1dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
