--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -201,8 +201,8 @@
                         android:layout_height="75dp"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="15dp"
-                        app:srcCompat="@drawable/ic_notes"
-                        android:contentDescription="@null"/>
+                        android:contentDescription="@null"
+                        app:srcCompat="@drawable/ic_notes" />
 
                     <Button
                         android:id="@+id/notesButton"
@@ -228,7 +228,39 @@
                 android:layout_weight="1"
                 app:cardBackgroundColor="#fafafa"
                 app:cardCornerRadius="20dp"
-                app:cardElevation="0dp"/>
+                app:cardElevation="0dp">
+
+                <RelativeLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#F4F1E2">
+
+
+                    <ImageView
+                        android:id="@+id/imageViewTimer"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="15dp"
+                        android:contentDescription="@null"
+                        app:srcCompat="@drawable/ic_timer" />
+
+                    <Button
+                        android:id="@+id/timerButton"
+                        android:layout_width="140dp"
+                        android:layout_height="50dp"
+                        android:layout_below="@id/imageViewTimer"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/btn_bg"
+                        android:fontFamily="@font/roboto"
+                        android:text="Timer"
+                        android:textColor="#FFFFFF"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
 
