--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -7,7 +7,7 @@
     tools:context=".Timer">
 
     <ImageView
-        android:id="@+id/backHome8"
+        android:id="@+id/backHomeTimer"
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:contentDescription="@string/button"
