--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -3,12 +3,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/widget_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Press me"
-        android:background="@drawable/btn_bg"
-        android:backgroundTint="@color/beigy_brown"/>
+    <LinearLayout
+        android:layout_width="327dp"
+        android:layout_height="95dp">
+
+        <Button
+            android:id="@+id/widget_button"
+            android:layout_width="293dp"
+            android:layout_height="85dp"
+            android:background="@drawable/btn_bg"
+            android:backgroundTint="@color/beigy_brown" />
+
+        <TextView
+            android:id="@+id/taskLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="-265dp"
+            android:layout_marginTop="3dp"
+            android:text="Number of Task Left:"
+            android:textSize="17sp"
+            android:translationZ="10dp" />
+
+        <TextView
+            android:id="@+id/no_of_tasks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="65dp"
+            android:layout_marginTop="3dp"
+            android:text="1"
+            android:textSize="17sp"
+            android:translationZ="10dp" />
+
+    </LinearLayout>
 </RelativeLayout>
