--- a/app/src/main/res/layout/activity_to_do_list_task_details.xml
+++ b/app/src/main/res/layout/activity_to_do_list_task_details.xml
@@ -65,82 +65,86 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/taskTitle"
-        android:layout_width="320dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/custom_input"
-        android:fontFamily="@font/roboto"
-        android:padding="10dp"
-        android:text="Title"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/textView22"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        <TextView
+            android:id="@+id/taskTitle"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="35dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/custom_input"
+            android:backgroundTint="#e9e0d4"
+            android:fontFamily="@font/roboto"
+            android:padding="10dp"
+            android:text="Title"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="normal"
+            app:layout_constraintBottom_toTopOf="@+id/textView22"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-    <TextView
-        android:id="@+id/taskDiscription"
-        android:layout_width="320dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="124dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/custom_input"
-        android:fontFamily="@font/roboto"
-        android:padding="10dp"
-        android:text="DescriptionDetail"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView23"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskTitle" />
+        <TextView
+            android:id="@+id/taskDiscription"
+            android:layout_width="320dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="35dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="124dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/custom_input"
+            android:backgroundTint="#e9e0d4"
+            android:fontFamily="@font/roboto"
+            android:padding="10dp"
+            android:text="DescriptionDetail"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView23"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/taskTitle" />
 
-    <TextView
-        android:id="@+id/taskStartTIme"
-        android:layout_width="320dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="164dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/custom_input"
-        android:fontFamily="@font/roboto"
-        android:padding="10dp"
-        android:text="Start Time"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskDiscription" />
+        <TextView
+            android:id="@+id/taskStartTIme"
+            android:layout_width="320dp"
+            android:layout_height="53dp"
+            android:layout_marginStart="35dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="164dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/custom_input"
+            android:backgroundTint="#e9e0d4"
+            android:fontFamily="@font/roboto"
+            android:padding="10dp"
+            android:text="Start Time"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/taskDiscription" />
 
-    <TextView
-        android:id="@+id/tasktDeadLine"
-        android:layout_width="320dp"
-        android:layout_height="53dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/custom_input"
-        android:fontFamily="@font/roboto"
-        android:padding="10dp"
-        android:text="Deadline"
-        android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/deleteTaskButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskStartTIme" />
+        <TextView
+            android:id="@+id/tasktDeadLine"
+            android:layout_width="320dp"
+            android:layout_height="53dp"
+            android:layout_marginStart="35dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/custom_input"
+            android:backgroundTint="#e9e0d4"
+            android:fontFamily="@font/roboto"
+            android:padding="10dp"
+            android:text="Deadline"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/deleteTaskButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/taskStartTIme" />
 
     <ImageView
         android:id="@+id/taskDetailBackButton"
@@ -151,17 +155,17 @@
         app:srcCompat="@drawable/ic_back"
         android:contentDescription="@string/button"/>
 
-    <Button
-        android:id="@+id/startStopTaskButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="16dp"
-        android:backgroundTint="#cc6b49"
-        android:text="Start"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/taskTimer" />
+        <Button
+            android:id="@+id/startStopTaskButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="55dp"
+            android:layout_marginTop="16dp"
+            android:backgroundTint="#73bda8"
+            android:text="Start"
+            android:textColor="#FFFFFF"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/taskTimer" />
 
     <Button
         android:id="@+id/completeTaskButton"
