--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -1,83 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:background="@drawable/gradient_list"
     android:gravity="center"
+    android:orientation="horizontal"
     tools:context=".MusicPlayer">
 
-    <androidx.cardview.widget.CardView
+
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/mygif"
+        android:layout_width="400dp"
+        android:layout_height="300dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="6dp"
+        android:src="@drawable/lofi"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_gravity="center"
+        android:elevation="4dp"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonStop"
+        app:layout_constraintEnd_toEndOf="@+id/buttonStop"
+        app:layout_constraintStart_toStartOf="@+id/buttonStop"
+        app:layout_constraintTop_toTopOf="@+id/buttonStop"
+        app:srcCompat="@drawable/ic_stop" />
+
+    <Button
+        android:id="@+id/buttonStop"
         android:layout_width="100dp"
-        android:layout_height="100dp">
+        android:layout_height="90dp"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:layout_marginBottom="100dp"
+        android:background="@drawable/btn_circle"
+        android:backgroundTint="#cc6b49"
+        android:fontFamily="@font/roboto"
+        android:padding="10dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.736"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mygif"
+        app:layout_constraintVertical_bias="0.49" />
 
-        <ImageView
-            android:id="@+id/imageView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:elevation="4dp"
-            app:srcCompat="@drawable/ic_pause" />
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_gravity="center"
+        android:elevation="4dp"
+        app:layout_constraintBottom_toBottomOf="@+id/buttonStart"
+        app:layout_constraintEnd_toEndOf="@+id/buttonStart"
+        app:layout_constraintStart_toStartOf="@+id/buttonStart"
+        app:layout_constraintTop_toTopOf="@+id/buttonStart"
+        app:srcCompat="@drawable/ic_play" />
 
-        <Button
-            android:id="@+id/buttonPause"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_gravity="center"
-            android:background="@drawable/btn_circle"
-            android:backgroundTint="#6f5643" />
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
+    <Button
+        android:id="@+id/buttonStart"
         android:layout_width="100dp"
-        android:layout_height="100dp">
+        android:layout_height="90dp"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:layout_marginBottom="100dp"
+        android:background="@drawable/btn_circle"
+        android:fontFamily="@font/roboto"
+        android:padding="10sp"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.273"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mygif"
+        app:layout_constraintVertical_bias="0.485" />
 
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="71dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:elevation="4dp"
-            app:srcCompat="@drawable/ic_play" />
+    <ImageView
+        android:id="@+id/backHome"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_back" />
 
-        <Button
-            android:id="@+id/buttonStart"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:background="@drawable/btn_circle"
-            android:fontFamily="@font/roboto"
-            android:padding="10sp"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="100dp"
-        android:layout_height="100dp">
-
-        <Button
-            android:id="@+id/buttonStop"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:background="@drawable/btn_circle"
-            android:backgroundTint="#cc6b49"
-            android:fontFamily="@font/roboto"
-            android:padding="10dp"
-            android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/imageView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:elevation="4dp"
-            app:srcCompat="@drawable/ic_stop" />
-    </androidx.cardview.widget.CardView>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
