--- a/app/src/main/res/layout/quote_dialog_layout.xml
+++ b/app/src/main/res/layout/quote_dialog_layout.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Inspirational Quote of the day"
+                android:text="Quote of the day"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
