--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -97,7 +97,7 @@
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/roboto"
         android:padding="10dp"
-        android:text="mushroomcoding@gmail.com"
+        android:text="team2dontslack@gmail.com"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
